# moreward.h

./: .gitignore  CMakeLists.txt  Makefile  amalgamate.sh  amalgamate_2files.sh  guide.md  license.txt  mg.c  mg.h  moreward.h  readme.md  sample.c
docs/: readme.md
sample/: sample.c
src/: CMakeLists.txt  _a.h  _b.h  _e.h  a.h  alloc.c  amalgamate.sh  b.h  buffer.c  c.h  dict.c  i.h  list.c  log.c  m.h  m_alloc.c  mg.c  mg.h  mg_alloc.c  mg_buffer.c  mg_create_destroy.c  mg_list.c  mg_map.c  mg_string.c  strbuffer.c  tests.c
tests/: CMakeLists.txt  test_create_destroy.c  test_dict.c  test_list.c  test_strbuffer.c  tests.c  tests.h
tests/cases/: cases_readme.txt  t_aigen.c  t_basic.c  t_createdestroy_ai.c  t_list.c  t_list_ai.c  t_map_ai.c  t_smoke.c  t_string_ai.c
tests/e2e/: test_e2e.c
tests/unit/: test_unit.c
